tests/files/parser_tests/should_fail/016.cmdr
//Should not parse due to unterminated parentheses
x = 1 + 2);